--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "harck-client",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "engines": {
-    "node": "18.17.1"
+    "node": ">=18.18.0 <=20.0.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -13,29 +13,30 @@
     "export": "next export"
   },
   "dependencies": {
-    "@react-aria/ssr": "^3.9.1",
-    "axios": "^1.6.3",
-    "bootstrap": "^5.3.2",
-    "date-fns": "^3.0.6",
-    "next": "13.2.4",
-    "ramda": "^0.29.1",
-    "react": "18.2.0",
+    "@next/third-parties": "^15.0.2",
+    "@react-aria/ssr": "^3.9.6",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "next": "15.0.2",
+    "ramda": "^0.30.1",
+    "react": "18.3.1",
     "react-animated-css": "^1.2.1",
-    "react-bootstrap": "^2.9.2",
+    "react-bootstrap": "^2.10.5",
     "react-cookie-consent": "^9.0.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.12.0",
-    "react-js-pagination": "^3.0.3",
+    "react-icons": "^5.3.0",
+    "react-js-pagination": "^3.0.2",
     "react-markdown": "^9.0.1",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^10.0.6",
     "rehype-sanitize": "^6.0.0",
-    "sass": "^1.69.6"
+    "sass": "^1.80.6"
   },
   "devDependencies": {
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "serve": "^14.2.1"
+    "eslint": "9.14.0",
+    "eslint-config-next": "15.0.2",
+    "serve": "^14.2.4"
   }
 }
